[EDIT] 프로젝트 명 변경
- 코드 재활용을 위해 Model API 전체에 대한 프로젝트로 변경
- propertise.yaml을 부모 디렉토리로 옮김
- propertise를 부모 디렉토리에서 참조할 수 있도록 수저

--- a/modelAPI/pyproject.toml
+++ b/modelAPI/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "labelclassify"
+name = "modelapi"
 version = "0.1.0"
 description = ""
 authors = ["Lee Junhee <junhee0110@gmail.com>"]
