--- a/modelAPI/pyproject.toml
+++ b/modelAPI/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 pillow = "^10.0.0"
 pyyaml = "^6.0.1"
 chardet = "^5.2.0"
+pymysql = "^1.1.0"
+cryptography = "^41.0.3"
 
 
 [build-system]
