--- a/compose.yaml
+++ b/compose.yaml
@@ -12,14 +12,13 @@ services:
       - mysql
 
   mysql:
-    image: iamjunhee/phototimestamp-mysql:flask-dev
-    build: ./MySQL_dev
-    environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
+    image: mysql:latest
     volumes:
       - type: bind
-        source: ./MySQL_dev/db
-        target: /var/lib/mysql
+        source: ./MySQL_dev/
+        target: /docker-entrypoint-initdb.d/
+    environment:
+      - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
     networks:
       - pysql
 
